Modified BG color

--- a/KREA.css
+++ b/KREA.css
@@ -1,7 +1,7 @@
 h1{
     border: 3px solid black;
     border-radius: 15px;
-    background-color:blueviolet;
+    background-color:blanchedalmond;
 }
 
 .blink{
